# det

./: LICENSE  backbone.py  dataset.py  detection_head.py  loss.py  main.py  model.py  pyproject.toml  train.py  val.py  viz.py
src/det/: __init__.py  anchor_train.py  data.py  loss.py  pipeline.py  train.py
src/det/model/: backbone.py  block.py  detection_head.py  yolo.py
