[project]
name = "det"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayandip Dutta", email = "sayandip199309@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
